# py_did_multiplegt_stat

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
api/class/: index.html
api/functional/: index.html
api/plotting/: index.html
changelog/: index.html
docs/: examples.md  help.md  index.md  options.md  parity.md  stored_results.md  syntax.md
docs/api/: class.md  functional.md  plotting.md
examples/: index.html
help/: index.html
options/: index.html
parity/: index.html
search/: search_index.json
src/did_multiplegt_stat/: __init__.py  core.py  display.py  estimator.py  plotting.py
stored_results/: index.html
syntax/: index.html
tests/: conftest.py  test_class_api.py  test_custom_models.py  test_smoke.py  test_vignette_parity.py
